--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,6 +16,14 @@
       <ul id="taskList"></ul>
     </div>
 
+    <footer>
+      <center>
+        <p>
+          Made with ❤️ By
+          <a href="https://t.me/devproz">Akram</a>
+        </p>
+      </center>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
